add section desc

--- a/index.html
+++ b/index.html
@@ -68,5 +68,22 @@
             </div>
         </div>
     </section>
+    <section  class="description">
+        <div class="content">
+            <div class="description__images">
+                <img alt="mountain" class="description__image-back" src="image/desc-image.png">
+                <img   alt="mountain"class="description__image-main" src="image/desc-image-up.png">
+            </div>
+            <div class="description__wrapper">
+                <h2 class="description__title">о нашем походе</h2>
+                <h3 class="description__mini-title" >Исследуйте все горные массивы мира вместе с нами</h3>
+                <p class="description__text">Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть
+                                        более двух тысячелетий
+                    назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum, "consectetur"и занялся его поисками в классической латинской литературе.</p>
+
+                <button class="description__button">Программа тура</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
