--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           />
         </div>
         <div class="description__wrapper">
-          <h2 class="description__title">о нашем походе</h2>
-          <h3 class="description__mini-title">
+          <h2 class="title">о нашем походе</h2>
+          <h3 class="mini-title">
             Исследуйте все горные массивы мира вместе с нами
           </h3>
           <p class="description__text">
@@ -131,8 +131,8 @@
     <section class="offers">
       <div class="content">
         <div class="offers__wrapper">
-          <h2 class="offers__title">Наше предложение</h2>
-          <h2 class="offers__mini-title">Лучшие программы для тебя</h2>
+          <h2 class="title">Наше предложение</h2>
+          <h2 class="mini-title">Лучшие программы для тебя</h2>
           <p class="offers__text">
             Его корни уходят в один фрагмент классической латыни 45 года н.э.,
             то есть более двух тысячелетий назад. Ричард МакКлинток, профессор
@@ -183,6 +183,114 @@
           <img src="image/offers-3.png" alt="offers" />
           <img src="image/offers-4.png" alt="offers" />
         </div>
+      </div>
+    </section>
+    <section class="directions">
+      <div class="content">
+        <h2 class="title">По версии отдыхающих</h2>
+        <h3 class="mini-title">Популярные направления</h3>
+        <div class="directions__tours">
+          <div class="tour">
+            <img
+              class="tour__image"
+              alt="Озеро возле гор"
+              src="image/directions/river.png"
+            />
+            <div class="tour__block">
+              <div class="tour__texts">
+                <p class="tour__name">Озеро возле гор</p>
+                <p class="tour__desc">романтическое приключение</p>
+              </div>
+              <div class="tour__price">480 $</div>
+            </div>
+
+            <div class="tour__stars">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g id="ic:round-star">
+                  <path
+                    id="Vector"
+                    d="M12 17.27L16.15 19.78C16.91 20.24 17.84 19.56 17.64 18.7L16.54 13.98L20.21 10.8C20.88 10.22 20.52 9.12 19.64 9.04999L14.81 8.64L12.92 4.17999C12.58 3.36999 11.42 3.36999 11.08 4.17999L9.19 8.62999L4.36 9.03999C3.48 9.10999 3.12 10.21 3.79 10.79L7.46 13.97L6.36 18.69C6.16 19.55 7.09 20.23 7.85 19.77L12 17.27Z"
+                    fill="#F2BE22"
+                  />
+                </g>
+              </svg>
+              <p>4.9</p>
+            </div>
+          </div>
+          <div class="tour">
+            <img
+              class="tour__image"
+              alt="Ночь в горах"
+              src="image/directions/stars.png"
+            />
+            <div class="tour__block">
+              <div class="tour__texts">
+                <p class="tour__name">Ночь в горах</p>
+                <p class="tour__desc">в компании друзей</p>
+              </div>
+              <div class="tour__price">500 $</div>
+            </div>
+
+            <div class="tour__stars">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g id="ic:round-star">
+                  <path
+                    id="Vector"
+                    d="M12 17.27L16.15 19.78C16.91 20.24 17.84 19.56 17.64 18.7L16.54 13.98L20.21 10.8C20.88 10.22 20.52 9.12 19.64 9.04999L14.81 8.64L12.92 4.17999C12.58 3.36999 11.42 3.36999 11.08 4.17999L9.19 8.62999L4.36 9.03999C3.48 9.10999 3.12 10.21 3.79 10.79L7.46 13.97L6.36 18.69C6.16 19.55 7.09 20.23 7.85 19.77L12 17.27Z"
+                    fill="#F2BE22"
+                  />
+                </g>
+              </svg>
+              <p>4.5</p>
+            </div>
+          </div>
+          <div class="tour">
+            <img
+              class="tour__image"
+              alt="Йога в горах"
+              src="image/directions/mountain.png"
+            />
+            <div class="tour__block">
+              <div class="tour__texts">
+                <p class="tour__name">Йога в горах</p>
+                <p class="tour__desc">для тех, кто забоится о себе</p>
+              </div>
+              <div class="tour__price">230 $</div>
+            </div>
+
+            <div class="tour__stars">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g id="ic:round-star">
+                  <path
+                    id="Vector"
+                    d="M12 17.27L16.15 19.78C16.91 20.24 17.84 19.56 17.64 18.7L16.54 13.98L20.21 10.8C20.88 10.22 20.52 9.12 19.64 9.04999L14.81 8.64L12.92 4.17999C12.58 3.36999 11.42 3.36999 11.08 4.17999L9.19 8.62999L4.36 9.03999C3.48 9.10999 3.12 10.21 3.79 10.79L7.46 13.97L6.36 18.69C6.16 19.55 7.09 20.23 7.85 19.77L12 17.27Z"
+                    fill="#F2BE22"
+                  />
+                </g>
+              </svg>
+              <p>5.0</p>
+            </div>
+          </div>
+        </div>
+        <div class="directions__button button">Рейтинг направлений</div>
       </div>
     </section>
   </body>
