add section blogs

--- a/index.html
+++ b/index.html
@@ -293,5 +293,93 @@
         <div class="directions__button button">Рейтинг направлений</div>
       </div>
     </section>
+    <section class="blog">
+      <div class="content">
+        <h2 class="title">Делимся впечатлениями</h2>
+        <h3 class="mini-title">Блог о путешествиях</h3>
+        <div class="blog__items">
+          <div class="article-block">
+            <div class="article-block__image">
+              <img src="image/blog/italy.png" />
+            </div>
+            <div class="article-block__texts">
+              <h4 class="article-block__title">
+                Красивая Италия, какая она в реальности?
+              </h4>
+
+              <p class="article-block__desc">
+                Для современного мира базовый вектор развития предполагает
+                независимые способы реализации соответствующих условий
+                активизации.
+              </p>
+
+              <div class="article-block__bottom">
+                <div class="article-block__date">01/04/2023</div>
+                <a class="article-block__link">читать статью</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="article-block">
+            <div class="article-block__image">
+              <img src="image/blog/fly.png" />
+            </div>
+            <div class="article-block__texts">
+              <h4 class="article-block__title">
+                Долой сомнения! Весь мир открыт для вас!
+              </h4>
+
+              <p class="article-block__desc">
+                Для современного мира базовый вектор развития предполагает
+                независимые способы реализации соответствующих условий
+                активизации
+              </p>
+
+              <div class="article-block__bottom">
+                <div class="article-block__date">01/04/2023</div>
+                <a class="article-block__link">читать статью</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="article-block">
+            <div class="article-block__image">
+              <img src="image/blog/city.png" />
+            </div>
+            <div class="article-block__texts">
+              <h4 class="article-block__title">
+                Как подготовиться к путешествию в одиночку?
+              </h4>
+
+              <p class="article-block__desc">
+                Для современного мира базовый вектор развития предполагает.
+              </p>
+
+              <div class="article-block__bottom">
+                <div class="article-block__date">01/04/2023</div>
+                <a class="article-block__link">читать статью</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="article-block">
+            <div class="article-block__image">
+              <img src="image/blog/india.png" />
+            </div>
+            <div class="article-block__texts">
+              <h4 class="article-block__title">Индия ... летим?</h4>
+
+              <p class="article-block__desc">Для современного мира базовый.</p>
+
+              <div class="article-block__bottom">
+                <div class="article-block__date">01/04/2023</div>
+                <a class="article-block__link">читать статью</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="button">Другие материалы</button>
+      </div>
+    </section>
   </body>
 </html>
