add section photo-report

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
           <div class="article-block">
             <div class="article-block__image">
-              <img src="image/blog/city.png" />
+              <img alt="city" src="image/blog/city.png" />
             </div>
             <div class="article-block__texts">
               <h4 class="article-block__title">
@@ -364,7 +364,7 @@
 
           <div class="article-block">
             <div class="article-block__image">
-              <img src="image/blog/india.png" />
+              <img alt="india" src="image/blog/india.png" />
             </div>
             <div class="article-block__texts">
               <h4 class="article-block__title">Индия ... летим?</h4>
@@ -379,6 +379,46 @@
           </div>
         </div>
         <button class="button">Другие материалы</button>
+      </div>
+    </section>
+    <section class="photo-report">
+      <div class="content">
+        <h2 class="title">фото-отчет</h2>
+        <h3 class="mini-title">Делимся впечатлениями</h3>
+        <div class="photo-report__list">
+          <img
+            alt="photographer"
+            class="photo-report__photographer"
+            src="image/photo-report/photographer.png"
+          />
+          <img
+            alt="map"
+            class="photo-report__map"
+            src="image/photo-report/map.png"
+          />
+          <img
+            alt="dubai"
+            class="photo-report__dubai"
+            src="image/photo-report/dubai.png"
+          />
+          <img
+            alt="sea"
+            class="photo-report__sea"
+            src="image/photo-report/sea.png"
+          />
+          <img
+            alt="mountains"
+            class="photo-report__mountains"
+            src="image/photo-report/mountains.png"
+          />
+          <img
+            alt="notepad"
+            class="photo-report__notepad"
+            src="image/photo-report/notepad.png"
+          />
+        </div>
+
+        <div class="button">Наш pinterest</div>
       </div>
     </section>
   </body>
