--- a/index.html
+++ b/index.html
@@ -421,5 +421,86 @@
         <div class="button">Наш pinterest</div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="content">
+        <div class="email">
+          <div class="email__titles">
+            <h2 class="title">актуально</h2>
+            <h3 class="mini-title">
+              Получайте полезные рассылки о путешествиях
+            </h3>
+          </div>
+
+          <div class="email__wrapper">
+            <form class="email__form">
+              <label>
+                <span>Введите e-mail адрес</span>
+                <input placeholder="name@domain.com" />
+              </label>
+              <button class="email__button button">
+                Подписаться на новости
+              </button>
+            </form>
+            <p class="email__text">
+              подписываясь на новости, вы автоматически соглашаетесь
+              <span>
+                с условиями обработки персональных данных и правилами рекламных
+                рассылок</span
+              >
+            </p>
+          </div>
+        </div>
+        <div class="footer__col-1">
+          <div class="footer__texts">
+            <h2 class="footer__title">Компания «РумТибет»</h2>
+            <p class="footer__text">
+              Его корни уходят в один фрагмент классической латыни 45 года н.э.,
+              то есть более двух тысячелетий назад. Ричард МакКлинток, профессор
+              латыни из колледжа Hampden-Sydney.
+            </p>
+          </div>
+
+          <div class="footer__contacts">
+            <p class="footer__email">info@domain.com</p>
+            <p class="footer__tel">+7 (123) 456-78-90</p>
+          </div>
+
+          <div class="footer__social">
+            <img alt="tg" src="image/social/tg.svg" />
+            <img alt="vk" src="image/social/vk.svg" />
+            <img alt="pin" src="image/social/pin.svg" />
+            <img alt="skype" src="image/social/skype.svg" />
+          </div>
+        </div>
+
+        <div class="footer__col-2">
+          <h2 class="footer__title">Компания «РумТибет»</h2>
+          <ul class="footer__list">
+            <li>Прогулки в горы летом</li>
+            <li>Зимние походы в горы</li>
+            <li>Посещение храмов в горах</li>
+            <li>Экстремальные виды туризма</li>
+            <li>Походы в джунглях Амазонии</li>
+            <li>Поездка в Африку</li>
+          </ul>
+        </div>
+
+        <div class="footer__col-3">
+          <h2 class="footer__title">Важно для путешествий</h2>
+          <ul class="footer__list">
+            <li>Как собрать в долгий поход?</li>
+            <li>Жизненно важные предметы для похода</li>
+            <li>Медицинская страховка, гарантии безопасности</li>
+            <li>Если вы врач - загляните сюда</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <section class="company-information">
+      <div class="content">
+        <p>ИП Константинопольский К.К., 2023</p>
+        <p>Политика обработки персональных данных</p>
+      </div>
+    </section>
   </body>
 </html>
